# online-store

./: README.md  data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_slug_alter_blog_is_publish.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py  last_five.py
catalog/migrations/: 0001_initial.py  0002_category_created_ad.py  0002_student_is_active.py  0003_contact_remove_category_created_ad.py  0004_alter_product_create_date_and_more.py  0005_alter_product_category.py  0006_version.py  0007_product_owner.py  0008_remove_product_owner.py  0009_product_owner.py
catalog/templates/: base.html
catalog/templates/catalog/: base.html  contact.html  home.html  index.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  student_confirm_delete.html  student_detail.html  student_form.html  student_list.html
catalog/templates/main/: contact.html  home.html  index.html  product_details.html  product_form.html  (+1 more)
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
materials/: models.py  views.py
materials/migrations/: 0001_initial.py  0002_material_is_published_material_slug_and_more.py
users/: forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_mail_key.py  0003_alter_user_mail_key.py  0004_alter_user_mail_key.py  0005_alter_user_mail_key.py
(+11 files in other folders)
